--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typeface-roboto": "0.0.54",
     "vue": "^2.5.17",
     "vue-beautiful-chat": "^2.2.0",
+    "vue-meta-info": "^0.1.7",
     "vue-router": "^3.0.1",
     "vue-socket.io": "^3.0.4",
     "vuex": "^3.0.1"
