--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build && node push.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -32,6 +32,7 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
     "node-sass": "^4.9.0",
+    "scp2": "^0.5.0",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17"
   }
