--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "compression-webpack-plugin": "^3.0.0",
     "muse-ui": "^3.0.1",
     "muse-ui-loading": "^0.2.0",
     "muse-ui-message": "^0.2.1",
     "muse-ui-progress": "^0.1.0",
     "muse-ui-toast": "^0.3.0",
+    "qrcodejs2": "^0.0.2",
     "thor-x": "^0.0.81",
     "three": "^0.98.0",
     "typeface-roboto": "0.0.54",
     "vue": "^2.5.17",
     "vue-beautiful-chat": "^2.2.0",
     "vue-meta-info": "^0.1.7",
+    "vue-qr": "^2.1.0",
     "vue-router": "^3.0.1",
     "vue-socket.io": "^3.0.4",
     "vuex": "^3.0.1"
